tests/snapshots/progress_certificate_golden__progress_certificate_happy_path.snap
---
source: tests/progress_certificate_golden.rs
expression: "snapshot_verdict(&[120.0, 86.0, 52.0, 25.0, 9.0, 0.0], config)"
---
{
  "config": {
    "confidence": 0.95,
    "epsilon": 0.0,
    "max_step_bound": 40.0,
    "min_observations": 4,
    "stall_threshold": 4
  },
  "sequence": [
    120.0,
    86.0,
    52.0,
    25.0,
    9.0,
    0.0
  ],
  "verdict": {
    "azuma_bound": 1.0,
    "confidence_bound": 1.0,
    "converging": true,
    "current_potential": 0.0,
    "drain_phase": "quiescent",
    "empirical_variance": 99.6,
    "estimated_remaining_steps": 0.0,
    "evidence": [
      {
        "bound": 0.0,
        "description": "quiescence reached (V ≈ 0)",
        "potential": 0.0,
        "step": 5
      },
      {
        "bound": 1.0,
        "description": "total progress 120.0000 over 5 steps, mean net progress 24.0000/step, gross credit 24.0000/step, Azuma tail P ≤ 1.000000",
        "potential": 0.0,
        "step": 5
      }
    ],
    "freedman_bound": 1.0,
    "initial_potential": 120.0,
    "max_observed_step": 34.0,
    "mean_credit": 24.0,
    "rendered": "Progress Certificate Verdict\n============================\nConverging:         true\nStall detected:     false\nSteps:              6\nV(Σ₀):              120.0000\nV(Σₜ):              0.0000\nMean credit/step:   24.0000\nMax |Δ|:            34.0000\nDrain phase:        quiescent\nConfidence bound:   1.000000\nAzuma bound:        1.000000\nSelected tail:      1.000000\nDelta variance:     99.600000\nEst. remaining:     0.0 steps\nEvidence (2 entries):\n  step=5: V=0.0000, bound=0.000000 — quiescence reached (V ≈ 0)\n  step=5: V=0.0000, bound=1.000000 — total progress 120.0000 over 5 steps, mean net progress 24.0000/step, gross credit 24.0000/step, Azuma tail P ≤ 1.000000\n",
    "stall_detected": false,
    "total_steps": 6
  }
}
